--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- APP DESCRIPTION -->
+    <meta
+      name="description"
+      content="Embark on an endless journey of innovation and elegance with our collection of premium Apple products. Experience the timeless allure of cutting-edge technology, seamlessly integrated into your modern lifestyle. Welcome to a world where the story of excellence knows no bounds."
+    />
+
+    <!-- SOCIAL SHARE -->
+    <meta property="og:title" content="Applez" />
+    <meta property="og:image" content="../src/img/mockup-img.jpg" />
+    <meta
+      property="og:description"
+      content="Embark on an endless journey of innovation and elegance with our collection of premium Apple products. Experience the timeless allure of cutting-edge technology, seamlessly integrated into your modern lifestyle. Welcome to a world where the story of excellence knows no bounds."
+    />
+    <meta property="og:url" content="https://applez.netlify.app/" />
+    <meta property="twitter:title" content="Applez" />
+    <!-- <meta name="twitter:creator" content="@commercejs" /> -->
+    <meta property="twitter:image" content="/mockup.jpg" />
+    <meta
+      property="twitter:description"
+      content="Embark on an endless journey of innovation and elegance with our collection of premium Apple products. Experience the timeless allure of cutting-edge technology, seamlessly integrated into your modern lifestyle. Welcome to a world where the story of excellence knows no bounds."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!-- LINKING FONT FAMILLY OF POPPINS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,7 +43,7 @@
       href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
     />
 
-    <title>Vite + React</title>
+    <title>Applez</title>
   </head>
   <body>
     <div id="root"></div>
