Fix the sharing card image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- SOCIAL SHARE -->
     <meta property="og:title" content="Applez" />
-    <meta property="og:image" content="../src/img/mockup-img.jpg" />
+    <meta property="og:image" content="/mockup.jpg" />
     <meta
       property="og:description"
       content="Embark on an endless journey of innovation and elegance with our collection of premium Apple products. Experience the timeless allure of cutting-edge technology, seamlessly integrated into your modern lifestyle. Welcome to a world where the story of excellence knows no bounds."
