Change og social image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <!-- SOCIAL SHARE -->
     <meta property="og:title" content="Applez" />
-    <meta property="og:image" content="https://applez.netlify.app/mockup.jpg" />
+    <meta
+      property="og:image"
+      content="https://applez.netlify.app/mockup_website.jpg"
+    />
     <meta
       property="og:description"
       content="Embark on an endless journey of innovation and elegance with our collection of premium Apple products. Experience the timeless allure of cutting-edge technology, seamlessly integrated into your modern lifestyle. Welcome to a world where the story of excellence knows no bounds."
@@ -24,7 +27,7 @@
     <!-- <meta name="twitter:creator" content="@commercejs" /> -->
     <meta
       property="twitter:image"
-      content="https://applez.netlify.app/mockup.jpg"
+      content="https://applez.netlify.app/mockup_website.jpg"
     />
     <meta
       property="twitter:description"
